--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+*{
+    margin: 0;
+    padding: 0;
+}
 .bg-T{
     background-color: #f6f5f1;
+}
+
+.thirdImagePadding{
+    padding: 50px 50px 0 50px;
 }
